--- a/Ch05/05_03_Begin/Website/Website.csproj
+++ b/Ch05/05_03_Begin/Website/Website.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Models\Identity\AccountViewModels.cs" />
     <Compile Include="Models\Identity\IdentityModels.cs" />
     <Compile Include="Models\Identity\ManageViewModels.cs" />
+    <Compile Include="Models\CreateProductRequest.cs" />
     <Compile Include="Models\ProductsListViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
